--- a/App/app.json
+++ b/App/app.json
@@ -1,6 +1,6 @@
 {
-  "id": "9c30c7cc-475b-4bb3-b9ed-63b83d3627e1",
-  "name": "AL.Template",
+  "id": "ccafac8a-f110-47e2-9b7a-c82fc525c932",
+  "name": "Bing Maps SDK",
   "publisher": "Julian Dittmann",
   "brief": "",
   "description": "",
@@ -8,7 +8,7 @@
   "privacyStatement": "",
   "EULA": "",
   "help": "",
-  "url": "https://github.com/juliandittmann/AL.Template",
+  "url": "https://github.com/juliandittmann/AL.BingMapsSDK",
   "logo": "",
   "dependencies": [
   ],
