--- a/App/.vscode/settings.json
+++ b/App/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "CRS.ObjectNamePrefix": "jdi Bing ",
+    "CRS.ObjectNamePrefix": "jdi BingMaps ",
     "CRS.RemovePrefixFromFilename": true,
     "al.ruleSetPath": ".codeanalysis/ignoreRuleset.ruleset.json",
 }
