--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,7 +3,7 @@ name: CD
 on:
   workflow_run:
     workflows: ["CI"]
-    branches: [master]
+    branches: [main]
     types: 
       - completed
   workflow_dispatch:
