ci artifacts updated

--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -19,7 +19,7 @@
     "versions": [
         {
             "version": "ci",
-            "artifact": "//17.0.17126.17791/us",
+            "artifact": "///us/Current",
             "cacheImage": true,
             "CreateRuntimePackages": true
         },
