--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -4,7 +4,7 @@
     "installApps": "",
     "previousApps": "https://juliandittmann.blob.core.windows.net/al-bingmapssdk/latest/apps.zip",
     "appFolders": "App",
-    "testFolders": "Test",
+    "testFolders": "Test,Demo",
     "installTestFramework": true,
     "installTestLibraries": false,
     "installPerformanceToolkit": false,
