--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
         uses: Azure/get-keyvault-secrets@v1.2
         with:
           keyvault: "juliandittmann"
-          secrets: 'CodeSignCertPfxFile, InsiderSasToken, LicenseFile'
+          secrets: 'CodeSignCertPfxFile, CodeSignCertPfxPassword, InsiderSasToken, LicenseFile'
         id: azureGetSecretAction
 
       - name: Run pipeline
@@ -47,7 +47,7 @@ jobs:
           InsiderSasToken: ${{ steps.azureGetSecretAction.outputs.InsiderSasToken }}
           LicenseFile: ${{ steps.azureGetSecretAction.outputs.LicenseFile }}
           CodeSignCertPfxFile: ${{ steps.azureGetSecretAction.outputs.CodeSignCertPfxFile }}
-          CodeSignCertPfxPassword: ${{ secrets.CodeSignCertPfxPassword }}
+          CodeSignCertPfxPassword: ${{ steps.azureGetSecretAction.outputs.CodeSignCertPfxPassword }}
 
       - name: Save manifest
         run: |
