--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,17 +33,17 @@ jobs:
         uses: Azure/get-keyvault-secrets@v1.2
         with:
           keyvault: "juliandittmann"
-          secrets: 'CodeSignCertPfxFile, CodeSignCertPfxPassword, InsiderSasToken, LicenseFile'
+          secrets: 'CodeSignCertPfxFile, CodeSignCertPfxPassword, InsiderSasToken'
         id: azureGetSecretAction
 
       - name: Run pipeline
-        uses: juliandittmann/run-alpipeline@v0.1
+        uses: juliandittmann/run-alpipeline@v0.3
         with:
           version: ${{env.version}}
           appVersion: ${{env.appVersion}}
           appBuild: ${{env.appBuild}}
           appRevision: ${{env.appRevision}}
-          ApplicationInsightsKey: ${{ secrets.ApplicationInsightsKey }}
+          ApplicationInsightsConnectionString: ${{ secrets.ApplicationInsightsConnectionString }}
           InsiderSasToken: ${{ steps.azureGetSecretAction.outputs.InsiderSasToken }}
           CodeSignCertPfxFile: ${{ steps.azureGetSecretAction.outputs.CodeSignCertPfxFile }}
           CodeSignCertPfxPassword: ${{ steps.azureGetSecretAction.outputs.CodeSignCertPfxPassword }}
